[package]
name = "lottery-schedule"
version = "0.1.0"
edition = "2021"
authors = ["Yiwei Yang <victoryang00@ucsc.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1", optional = true }
bytes = "1"
futures-util = "0.3"
lazy_static = "1.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
spin = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"