[package]
authors = ["Yiwei Yang <victoryang00@ucsc.edu>"]
edition = "2021"
name = "lottery-schedule-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "2.0.2"
tokio = {version = "1.15", features = ["full"]}
madsim = "0.2.22"